# c2pa-attacks

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  comments.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  publish-and-release.yml
attacks/: README.md  rendering.attack  special_characters.attack  sql_injection.attack  ten_thousand_characters.attack  xss.attack
docs/: appendix.md  usage.md
sample/: README.md  author_name_regex.json  malicious_certificate.json  malicious_certificate.key  malicious_certificate.pem  malicious_certificate.pem.expired  malicious_intermediate.pem  malicious_root.pem  ps256.pub  store.cfg  test.json  test_claim_v2.json  title_regex_v2_example.json  trust_anchors.pem
src/: main.rs  signer.rs
utilities/: README.md  generate_sample_out.sh
