[package]
name = "c2pa-attacks"

# Please do not manually edit `version`. Version updates will be generated
# automatically when c2pa-attacks is published. Remember to use (MINOR) or
# (MAJOR) tags in the PR title to trigger non-patch updates as needed.
version = "0.1.0"

description = "Command line tool for creating C2PA manifests for security testing"
authors = ["Peleus Uhley <puhley@adobe.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["c2pa", "xmp", "metadata"]
edition = "2021"
rust-version = "1.86.0"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-attacks"

[dependencies]
anyhow = "1.0"
c2pa = { version = "0.49.3", features = ["fetch_remote_manifests", "file_io"] }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0" }
tempfile = "3.15.0"
regex = "1.11.1"
url = "2.5.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "thin" # Link time optimization.
